--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -667,6 +667,10 @@
     "message": "Invia messaggio ad altre estensioni",
     "description": "Send message to other add-on"
   },
+  "commandLabelExecuteUserScript": {
+    "message": "Esegui script utente",
+    "description": "Execute user script"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Aggiunge o rimuove un segnalibro.",
     "description": "Adds or removes a bookmark."
@@ -963,6 +967,10 @@
     "message": "Invia un messaggio personalizzato ad un altro componente aggiuntivo. Questo consente l'utilizzo di altre funzionalità di componenti aggiuntivi.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
   },
+  "commandDescriptionExecuteUserScript": {
+    "message": "Esegue codice JavaScript personalizzato nella pagina web corrente.",
+    "description": "Executes custom JavaScript code in the current webpage."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Nuova posizione scheda",
     "description": "New tab position"
@@ -1107,6 +1115,26 @@
     "message": "Focus nuova finestra",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptCode": {
+    "message": "Codice Script utente",
+    "description": "User Script Code"
+  },
+  "commandSettingLabelTargetFrame": {
+    "message": "Frame di destinazione",
+    "description": "Target Frame"
+  },
+  "commandSettingLabelTargetFrameSourceFrame": {
+    "message": "Frame sorgente",
+    "description": "Source frame"
+  },
+  "commandSettingLabelTargetFrameAllFrames": {
+    "message": "Tutti i frame",
+    "description": "All frames"
+  },
+  "commandSettingLabelTargetFrameTopFrame": {
+    "message": "Frame superiore",
+    "description": "Top-level frame"
+  },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Definisce la posizione della nuova scheda rispetto alla scheda corrente.",
     "description": "Determines the position of the new tab relative to the current tab."
@@ -1194,6 +1222,14 @@
   "commandSettingDescriptionNewWindowFocus": {
     "message": "Determina se la finestra aperta deve ottenere il focus o no.",
     "description": "Determines if the opened window should gain focus or not."
+  },
+  "commandSettingDescriptionUserScriptCode": {
+    "message": "Fai attenzione, l'intero codice script viene eseguito nell'ambito della pagina web!",
+    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+  },
+  "commandSettingDescriptionTargetFrame": {
+    "message": "Il frame in cui deve essere iniettato lo script utente.",
+    "description": "The frame in which the user script should be injected."
   },
   "commandErrorNotificationTitle": {
     "message": "\"$COMMAND$\" comando non eseguito.",
