--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -667,6 +667,10 @@
     "message": "他のアドオンにメッセージを送る",
     "description": "Send message to other add-on"
   },
+  "commandLabelExecuteUserScript": {
+    "message": "ユーザースクリプトを実行",
+    "description": "Execute user script"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "ブックマークの追加またはその削除を行います。",
     "description": "Adds or removes a bookmark."
@@ -963,6 +967,10 @@
     "message": "他のアドオンにカスタムメッセージを送信します。これにより、他のアドオンの機能を使用できます。",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
   },
+  "commandDescriptionExecuteUserScript": {
+    "message": "現在のウェブページで、カスタムした JavaScript コードを実行します。",
+    "description": "Executes custom JavaScript code in the current webpage."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "新しいタブの位置",
     "description": "New tab position"
@@ -1107,6 +1115,26 @@
     "message": "新しいウィンドウにフォーカス",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptCode": {
+    "message": "ユーザースクリプトコード",
+    "description": "User Script Code"
+  },
+  "commandSettingLabelTargetFrame": {
+    "message": "ターゲットフレーム",
+    "description": "Target Frame"
+  },
+  "commandSettingLabelTargetFrameSourceFrame": {
+    "message": "ソースフレーム",
+    "description": "Source frame"
+  },
+  "commandSettingLabelTargetFrameAllFrames": {
+    "message": "すべてのフレーム",
+    "description": "All frames"
+  },
+  "commandSettingLabelTargetFrameTopFrame": {
+    "message": "トップレベルフレーム",
+    "description": "Top-level frame"
+  },
   "commandSettingDescriptionNewTabPosition": {
     "message": "現在のタブを基準にした新しいタブの位置を指定します。",
     "description": "Determines the position of the new tab relative to the current tab."
@@ -1194,6 +1222,14 @@
   "commandSettingDescriptionNewWindowFocus": {
     "message": "開いたウィンドウがフォーカスされるかどうかを指定します。",
     "description": "Determines if the opened window should gain focus or not."
+  },
+  "commandSettingDescriptionUserScriptCode": {
+    "message": "スクリプトコード全体がウェブページのスコープ内で実行される点にご注意ください。",
+    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+  },
+  "commandSettingDescriptionTargetFrame": {
+    "message": "ユーザースクリプトを差し込むフレームです。",
+    "description": "The frame in which the user script should be injected."
   },
   "commandErrorNotificationTitle": {
     "message": "\"$COMMAND$\" コマンドは失敗しました。",
