--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -667,6 +667,10 @@
     "message": "Enviar mensagem para outro extra",
     "description": "Send message to other add-on"
   },
+  "commandLabelExecuteUserScript": {
+    "message": "Executar script do utilizador",
+    "description": "Execute user script"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Adiciona ou remove um marcador.",
     "description": "Adds or removes a bookmark."
@@ -963,6 +967,10 @@
     "message": "Envia uma mensagem personalizada a outro extra. Isto permite a utilização de uma funcionalidade de outro extra.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
   },
+  "commandDescriptionExecuteUserScript": {
+    "message": "Executa código JavaScript personalizado na página atual.",
+    "description": "Executes custom JavaScript code in the current webpage."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Nova posição do separador",
     "description": "New tab position"
@@ -1107,6 +1115,26 @@
     "message": "Focar a nova janela",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptCode": {
+    "message": "Código de Script do Utilizador",
+    "description": "User Script Code"
+  },
+  "commandSettingLabelTargetFrame": {
+    "message": "Quadro de destino",
+    "description": "Target Frame"
+  },
+  "commandSettingLabelTargetFrameSourceFrame": {
+    "message": "Quadro de origem",
+    "description": "Source frame"
+  },
+  "commandSettingLabelTargetFrameAllFrames": {
+    "message": "Todos os quadros",
+    "description": "All frames"
+  },
+  "commandSettingLabelTargetFrameTopFrame": {
+    "message": "Quadro de nível superior",
+    "description": "Top-level frame"
+  },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Determina a posição do novo separador relativa à posição do separador atual.",
     "description": "Determines the position of the new tab relative to the current tab."
@@ -1194,6 +1222,14 @@
   "commandSettingDescriptionNewWindowFocus": {
     "message": "Determina se a janela aberta deve ser exibida em primeiro plano.",
     "description": "Determines if the opened window should gain focus or not."
+  },
+  "commandSettingDescriptionUserScriptCode": {
+    "message": "Cuidado! Todo o código do script é executado no escopo da página web.",
+    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+  },
+  "commandSettingDescriptionTargetFrame": {
+    "message": "O quadro (frame) no qual o script de utilizador será injetado.",
+    "description": "The frame in which the user script should be injected."
   },
   "commandErrorNotificationTitle": {
     "message": "O comando $COMMAND$ falhou.",
