--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1229,10 +1229,6 @@
     "message": "Search",
     "description": "Search"
   },
-  "commandBarSaveButton": {
-    "message": "Save",
-    "description": "Save"
-  },
   "commandBarRequiredPermissionsText": {
     "message": "Required permissions: ",
     "description": "Required permissions: "
@@ -1292,10 +1288,6 @@
     "message":  "Assign a custom name that will be displayed instead of the command name.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "Save",
-    "description": "Save"
-  },
   "gesturePopupDirectionsNotificationDuplicate": {
     "message": "This gesture is already in use by \"$COMMAND$\".",
     "description": "This gesture is already in use by \"$COMMAND$\".",
@@ -1341,9 +1333,9 @@
     "description": "Off - setting not checked"
   },
 
-  "LinkReadWiki": {
-    "message": "Read wiki for more info.",
-    "description": "Read wiki for more info."
+  "buttonSave": {
+    "message": "Save",
+    "description": "Save"
   },
 
   "darkTheme": {
